syntax = "proto3";

option go_package = "github.com/pstano1/go-cart/protopb/users";

import "google/api/annotations.proto";
import "google/protobuf/timestamp.proto";

service UsersService {
    rpc RegisterUser (RegisterUserRequest) returns (RegisterUserResponse) {
        option (google.api.http) = {
            post: "/v1/user",
            body: "*"
          };
    };
    rpc GetUser (GetUserRequest) returns (GetUserResponse) {
        option (google.api.http) = {
            get: "/v1/user"
          };
    };
}

message User {
	string id = 1;
    string customer_id = 2;
    repeated string permissions = 3;

    string username = 4;
    string name = 5;
    string surname = 6;
    string email = 7;
    string phone = 8;
	
	google.protobuf.Timestamp disabled_at = 9;
    google.protobuf.Timestamp created_at = 10;
    google.protobuf.Timestamp updated_at = 11;
}

message RegisterUserRequest {
    string customer_id = 1;
    repeated string permissions = 2;
    string username = 3;
    string password = 4;
    string name = 5;
    string surname = 6;
    string email = 7;
    string phone = 8;
}

message RegisterUserResponse {
    User user = 1;
}

message GetUserRequest {
    string id = 1;
}

message GetUserResponse {
    User user = 1;
}